ADD(API) Ajout d'éléments au DTO et modification config des tests